--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Momentum</title>
 </head>
 <body>
+    <h1 id = "title">Grb me!</h1>
+    <h1 class = "hello" id = "hellos">call me!</h1>
+    <div>
+        <h1 id="title2">shoot me!</h1>
+    </div>
     <script src="app.js"></script>
     
 </body>
