--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1 id = "title">Grb me!</h1>
     <h1 class = "hello" id = "hellos">call me!</h1>
-    <div>
-        <h1 id="title2">shoot me!</h1>
+    <div id="title2">
+        <h1 class="title2">shoot me!</h1>
     </div>
     <script src="app.js"></script>
     
