--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="title2">
         <h1 class="title2">shoot me!</h1>
     </div>
-    <script src="app.js"></script>
+    <script src="app2.js"></script>
     
 </body>
 </html>
