--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id = "title">Grb me!</h1>
     <h1 class = "hello" id = "hellos">call me!</h1>
     <div id="title2">
-        <h1 class="title2">shoot me!</h1>
+        <h1 class="sexy-font">shoot me!</h1>
     </div>
     <script src="app2.js"></script>
     
